--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
