--- a/package.json
+++ b/package.json
@@ -21,18 +21,16 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "sequelize": "^6.21.3",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
   }
 }
