--- a/package.json
+++ b/package.json
@@ -21,16 +21,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.21.3",
     "socket.io": "^2.2.0",
     "websocket": "^1.0.34"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1",
-    "nodemon": "^2.0.19"
   }
 }
